--- a/views/add-product.ejs
+++ b/views/add-product.ejs
@@ -1,10 +1,25 @@
-<%- include('includes/head.ejs') %>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title><%= pageTitle %></title>
+    <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/forms.css">
     <link rel="stylesheet" href="/css/product.css">
 </head>
 
 <body>
-   <%- include('includes/navigation.ejs') %>
+    <header class="main-header">
+        <nav class="main-header__nav">
+            <ul class="main-header__item-list">
+                <li class="main-header__item"><a class="<%= path === '/' ? 'active' : '' %>" href="/">Shop</a></li>
+                <li class="main-header__item"><a class="<%= path === '/admin/add-product' ? 'active' : '' %>" href="/admin/add-product">Add Product</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <main>
         <form class="product-form" action="/admin/add-product" method="POST">
@@ -16,4 +31,6 @@
             <button class="btn" type="submit">Add Product</button>
         </form>
     </main>
-<%- include('includes/end.ejs') %>
+</body>
+
+</html>
