--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -1,9 +1,29 @@
 <%- include('../includes/head.ejs') %>
+<link rel="stylesheet" href="/css/cart.css">
     </head>
 
     <body>
         <%- include('../includes/navigation.ejs') %>
         <main>
-            <h1>Nothing there!</h1>
+
+            <% if(orders.length <= 0) {%>
+                <h1>Nothing there!</h1>
+                
+                <% } else {%>
+                    <ul>
+                        <% orders.forEach(order => { %>
+                            <li>
+                                <h1># <%=order.id %></h1>
+                                <ul>
+                                    <% order.products.forEach(product => {%>
+                                        <li><%=product.title%>(<%=product.orderItem.quantity%>)</li>    
+                                    <%})%>
+                                </ul>                         
+                            </li>
+                        <%})%>
+                    </ul>
+            <%}%>
+
+            
         </main>
         <%- include('../includes/end.ejs') %>
