--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -16,8 +16,8 @@
                             <li class="orders__item">
                                 <h1># <%=order._id %></h1>
                                 <ul class="orders__products">
-                                    <% order.items.forEach(i => {%>
-                                        <li class="orders__products-item"><%=i.title%>(<%=i.quantity%>)</li>    
+                                    <% order.products.forEach(p => {%>
+                                        <li class="orders__products-item"><%=p.productData.title%>(<%=p.quantity%>)</li>    
                                     <%})%>
                                 </ul>                         
                             </li>
